# docs/swagger.yaml
@@ -125,6 +125,48 @@ paths:
       summary: Delete User
       tags:
       - users
+    patch:
+      consumes:
+      - application/json
+      description: Update info user
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.UserResponse'
+        "400":
+          description: The body of the request is empty or lack of Nickname, Email,
+            Password in the body of the request, the email has to be a valid email
+            and nickname has to have at least 3 characters and password at least 6.
+          schema:
+            $ref: '#/definitions/models.ErrosNoBody'
+        "401":
+          description: When you pass an invalid token in the request header or it
+            was not sent for authentication.
+          schema:
+            $ref: '#/definitions/models.ErrosNoBody'
+        "409":
+          description: User not exist
+          schema:
+            $ref: '#/definitions/models.ErrosNoBody'
+      security:
+      - ApiKeyAuth: []
+      summary: Update User
+      tags:
+      - users
   /users/login:
     post:
       consumes:
